	(use_poll): New variable..
	(gdb_notifier): poll- and select-versions merged.
	(add_file_handler): If HAVE_POLL, check whether poll is usable,
	and reset `use_poll' if not.
	(create_file_handler): Select poll- or select-version according to
	`use_poll'.
	(delete_file_handler, handle_file_event): Likewise.
	(gdb_wait_for_event, poll_timers): Likewise.

2000-03-22  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* printcmd.c (print_scalar_formatted):  Truncate addresses to the
	size of a target pointer before passing them to print_address.

2000-03-22  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/tm-i386aix.h (I386_AIX_TARGET): Remove.
	* config/i386/tm-linux.h (LOW_RETURN_REGNUM, HIGH_RETURN_REGNUM):
	Remove
	* i386-tdep.c (LOW_RETURN_REGNUM, HIGH_RETURN_REGNUM): New defines.
	(i386_extract_return_value): Rewritten.  Correctly support all
	floating-point types and large integer types on targets that use
	the standard i386 GDB register layout and return floating-point
	values in the FPU.

Wed Mar 22 15:09:34 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure.in (CONFIG_INITS): Do not append remote-nrom.c

2000-03-21  J.T. Conklin  <jtc@redback.com> 
 
        * i386/nbsd.mh (NATDEPFILES): Change i386b-nat.o to i386nbsd-nat.o. 
        * i386nbsd-nat.c: New file. 
 
        * i386/tm-nbsd.h (NUM_REGS): Removed. 
        (HAVE_I387_REGS): Defined. 
        * i386/nm-nbsd.h (FLOAT_INFO): Removed. 
 
        * tm-nbsd.h (IN_SOLIB_CALL_TRAMPOLINE): Define if not 
        SVR4_SHARED_LIBS. 

Wed Mar 22 11:18:59 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Add Jim Blandy to breakpoint maintainers.  David
 	taylor is the Solaris/SPARC maintainer.  Add Jonathan Larmour to
 	the write after approval list.

2000-03-21  Kevin Buettner  <kevinb@redhat.com>

	* symtab.h (MAX_SECTIONS, struct section_addr_info,
	symbol_file_add):  Move declarations from here...
	* symfile.h: ...to here.
